small refactoring remove unneeded code optimize methods  clear context xml file